tests/programs/errors/unbounded_method_call.flow
module unbounded_method_call

fn bad<T>(a: T): int {
    return a.compare(a)
}

fn main(): void { }
